--- a/project.yml
+++ b/project.yml
@@ -24,9 +24,9 @@ settings:
   CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED: YES
   ASSETCATALOG_COMPILER_GLOBAL_ACCENT_COLOR_NAME: "colors/accent-color"
   ENABLE_BITCODE: NO
-  BASE_APP_GROUP_IDENTIFIER: io.element
+  BASE_APP_GROUP_IDENTIFIER: io.element.jblackquill-dev
   APP_GROUP_IDENTIFIER: group.$(BASE_APP_GROUP_IDENTIFIER)
-  BASE_BUNDLE_IDENTIFIER: io.element.elementx
+  BASE_BUNDLE_IDENTIFIER: io.element.elementx.jblackquill-dev
   APP_NAME: ElementX
   APP_DISPLAY_NAME: Element X
   KEYCHAIN_ACCESS_GROUP_IDENTIFIER: $(AppIdentifierPrefix)$(BASE_BUNDLE_IDENTIFIER)
